fixed bug in having applied grid gap to rows and collumns

--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@
 	gap: 0 1.875rem;
 
 	@media screen and (width >= 768px) {
-		gap: 3.375rem;
+		gap: 0 3.375rem;
 	}
 
 	@media screen and (width >= 1440px) {
-		gap: 10.1875rem;
+		gap: 0 10.1875rem;
 	}
 }
 
